--- a/Index.html
+++ b/Index.html
@@ -5,19 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timed Code Quiz</title>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <header>
-        <h1>Javascript Quiz</h1>
-        <p>Get ready to test your Coding skills by taking this simple quiz. Take note that this Quiz is TIMED and every time you get a question wrong, 5 Seconds will be deducted from your Total as well as having 10 points deducted from your overall Score.</p>
-    </header>
+    <div class="scores"><a href="Score.html">View Highscores</a></div>
 
-    <div id="quiz"></div>
-    <button id="start">Click Here To Start The Quiz</button>
-    <div id="results"></div>
+    <div class="timer">Time: <span id="time">0</span></div>
+    <div id="start-screen" class="start">
+
+        <h1>Javascript Quiz</h1>
+        <p>Get ready to test your Coding skills by taking this simple quiz.</p>
+        <p>Take note that this Quiz is TIMED and every time you get a question wrong, 5 Seconds will be deducted from your Total as well as having 10 points deducted from your overall Score.</p>
+
+        <button id="start">Click Here To Start The Quiz</button>
+    </div>
+
+    <div id="questions" class="hide" style="display:none">
+        <h2 id="question-option"></h2>
+        <div id="choices" class="choices"></div>
+        <button id="btn1" class="options"></button>
+        <button id="btn2" class="options"></button>
+        <button id="btn3" class="options"></button>
+        <button id="btn4" class="options"></button>
+    </div>
+
+    
+
+
+   
+   <script src="./assets/js/questions.js"></script>
+   <script src="./assets/js/script.js"></script>
     
 </body>
 </html>
