Finished all code for the repository

--- a/Index.html
+++ b/Index.html
@@ -15,9 +15,9 @@
     <div class="timer">Time: <span id="time">0</span></div>
     <div id="start-screen" class="start">
 
-        <h1>Javascript Quiz</h1>
+        <h1>JavaScript Quiz</h1>
         <p>Get ready to test your Coding skills by taking this simple quiz.</p>
-        <p>Take note that this Quiz is TIMED and every time you get a question wrong, 5 Seconds will be deducted from your Total as well as having 10 points deducted from your overall Score.</p>
+        <p>Take note that this Quiz is TIMED and every time you get a question wrong, 5 Seconds will be deducted from your Total.</p>
 
         <button id="start">Click Here To Start The Quiz</button>
     </div>
@@ -36,7 +36,7 @@
 
    
    <script src="./assets/js/questions.js"></script>
-   <script src="./assets/js/script.js"></script>
+  
     
 </body>
 </html>
