--- a/assets/score.html
+++ b/assets/score.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Score</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="assets/css/style.css">
     
 </head>
@@ -15,7 +15,7 @@
         <h1>Let's see who has the Highest Score so far</h1>
         <ol id="highscores"></ol>
   
-        <a href="index.html"><button>Click Here to go back to retake this quiz</button></a>
+        <a href="../index.html"><button>Click Here to go back to retake this quiz</button></a>
         <button id="clear">Clear HighScores</button>
       </div>
   
