--- a/assets/score.html
+++ b/assets/score.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Score</title>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     
 </head>
 
@@ -19,7 +19,7 @@
         <button id="clear">Clear HighScores</button>
       </div>
   
-      <script src="./assets/js/score.js"></script>
+      <script src="./js/score.js"></script>
     
 </body>
 </html>
